client/main/main.styl
// variable defs

lightgreen = rgb(223, 240, 216)
lightred = rgb(242, 222, 222)
lightgray = #f5f5f5
lightblue = #d9edf7
monokai = #2f3129
darkblue = #337AB7
logored = #e95e45
darkgray = #222
midgray = #ddd

// stylus mixins

border-radius()
    -webkit-border-radius arguments
    -moz-border-radius arguments
    border-radius arguments
h-center(w)
    margin-right auto
    margin-left auto
    max-width w
    width w
v-center(n)
    vertical-align middle
    margin-bottom 0px
    margin-top n
w-content(w)
    max-width w
    top 50px
    width w
heading-style(txt, bg, border)
    border-width 1px 0px 0px 0px
    background-color bg
    border-color border
    border-style solid
    font-size 16px
    height 48px
    color txt

// main stylus

html
    font-family Verdana, sans-serif
html, body
    line-height normal
    height 100%
h1 > code
    background transparent
h5
    text-decoration underline
iframe
    width 100%
img
    max-width 100%

// main body

.main-content
    padding-bottom 5em
    position absolute
    w-content(70vw)
    left 30vw
.setup
    position relative
    h-center(600px)
    top 40px
.header // colors: txt, bg, border
    heading-style(black, lightgray, midgray)
.sidebar
    border-right thin dotted darkgray
    position fixed
    w-content(30vw)
    height 100%
    left 0px
.navbar-nav
    font-size 16px
.navbar-text
    v-center(14px)
.navbar-form
    v-center(6.5px)
.account
    height 100%
.sidelist
    max-height 30vh
    overflow-y scroll
    overflow-x hidden
.nav.sidelist > li.msg
    padding 5px
.center
    display block
    margin auto
.tcenter
    text-align center
.round
    border-radius(4px)
.hidden
    visibility hidden
.wide
    max-width 500px
    width 100%
.wider
    width 100%
.nomargin
    margin 0px
.nomargin-image
    margin-top -20px
.jumbotron
    background lightblue
    padding 40px 15vw 20px 15vw
    margin-bottom 0px
.welcome>.jumbotron
    padding 10px 15vw 16px 15vw
    margin-bottom 25px
    max-width 100%
.jumbotron > *
    margin-right auto
    margin-left auto
    max-width 750px
.jumbotron > h2
    margin-right initial
.panel
.panel-heading
    border-width 1px 0px 0px 0px
    border-radius 0px
    margin-bottom 0px
    margin-top 0px
.about-panel
    padding 0px 48px 16px 48px
    text-align center
    line-height normal
    font-weight 200
    max-width 800px
    font-size 21px
    display block
    margin auto
.alert
.list-group
    margin-bottom 0

// button styling

a.btn
    background buttonface
    color rgb(85, 85, 85)
    text-decoration none
a.powered-by-firepad // firepad editor
    display none
.btn:hover
    color white
.grn:hover
    background-color green
.edit:hover
    background-color orange
.del:hover
    background-color red

// id based styles

#mainhead // colors: txt, bg, border
    heading-style(white, darkblue, white)
#editor-head
    heading-style(white, darkblue, white)
    position fixed
    z-index 10
    width 100%
    .navbar-form
        margin-right 31vw
        padding 0px
#editor-container
    min-height: calc(100vh - 120px);
    overflow hidden
    height 83vh
#editor
    position absolute
    top 48px
    bottom 0
    right 0
    left 0
#feed
    padding 10px 5px
#active-file
#active-issue
#active-commit
li.file:hover a
button.list-group-item:hover
    background-color lightblue
    color darkblue
.github-logo
    height 25px
div.setup>h2
    font-family monospace
    color logored

// line numbering the diffs

pre.diff
    line-height 1
    padding: 5px
    border none
    margin 0
pre.ins
    background lightgreen
pre.del
    background lightred
span.lineno
    font-weight lighter
    font-style italic
    margin-left 0.5em
    float left

// jquery ui resizer

.ui-resizable-s
    background midgray
    height 25px
    bottom 0px
.ui-resizable-s:hover
    background lightblue
.ui-resizable-helper
    border 2px dotted #00F

// smaller bootstrap nav

@media (min-width: 400px) {
.navbar-toggle {
    display: none; }
.navbar-collapse {
    border-top: 0 none;
    box-shadow: none;
    width: auto; }
.navbar-collapse.collapse {
    display: block !important;
    height: auto !important;
    padding-bottom: 0;
    overflow: visible !important; }
.navbar-nav {
    float: left !important;
    margin: 0; }
.navbar-right {
    float: right !important;
    margin: 0; }
.navbar-nav>li {
float: left; }
.navbar-nav>li>a {
    height: 50px;
    padding-top: 10px;
    line-height: 30px;
    padding-bottom: 10px; }
.navbar-right>li>a {
    padding-top: 16px; }
}

// readable phone splash

@media (min-width: 600px) {
    .navbar a { font-size: 25px; }
}


// making custom navigation bar

#sitenav
    z-index 1
    background white
    max-height 50px
    position fixed
    height 50px
    width 100%
    left 0px
    top 0px
#sitenav > div
    display block
    height 50px
a.sitelink
    font-family monospace
    display inline-block
    margin-right 1em
    v-center(12px)
    font-size 20px
    color logored
a.sitelink:hover
    background logored
    color white
#siteleft
    padding-left 1em
    float left
#siteright
    padding-right 1.5em
    float right
#siteimg
    max-height 50px
    padding 7px
    float left

